# sarca

./: .env.example  .gitignore  Dockerfile.amd64  Dockerfile.arm64  Makefile  README.md  Taskfile.yml  compose.yml  docker-compose.yml  install.ps1  install.sh  sarca.conf.example
.github/workflows/: docker-image.yml  e2e.yml  release.yml
docker/: sarca-entrypoint.sh  telegram-bot-api-entrypoint.sh
docs/superpowers/plans/: 2026-07-24-multi-chat-replication.md  2026-07-24-setup-wizard.md  2026-07-24-trash-bin.md
docs/superpowers/specs/: 2026-07-24-multi-chat-replication-design.md  2026-07-24-setup-wizard-design.md  2026-07-24-trash-bin-design.md  2026-07-24-video-chunk-streaming-design.md
e2e/: conftest.py  pytest.ini  test_api.py  test_features.py  test_ui.py  test_upload_smoke.py
runtime/ui/: index.html
runtime/ui/assets/: index-8e25ce50.css  index-9acb5250.js
sarca/: Cargo.toml  clippy.toml  rustfmt.toml
sarca/src/: conf.rs  config.rs  errors.rs  main.rs  server.rs  startup.rs  storage_manager.rs
sarca/src/common/: access.rs  channels.rs  chunk_cache.rs  jwt_manager.rs  mailer.rs  mod.rs  password_manager.rs
sarca/src/common/db/: errors.rs  pool.rs
sarca/src/common/routing/: app_state.rs
sarca/src/common/routing/middlewares/: auth.rs
sarca/src/common/telegram_api/: bot_api.rs  mod.rs  schemas.rs  token_client.rs
sarca/src/models/: access.rs  chunk_replicas.rs  email_tokens.rs  file_chunks.rs  files.rs  mod.rs  oauth_accounts.rs  share_links.rs  storage_channels.rs  storages.rs  users.rs
sarca/src/repositories/: access.rs  app_settings.rs  chunk_replicas.rs  email_tokens.rs  favorites.rs  files.rs  mod.rs  oauth_accounts.rs  recent_files.rs  share_links.rs  storage_channels.rs  storage_workers.rs  storages.rs  users.rs
sarca/src/routers/: auth.rs  favorites.rs  files.rs  mod.rs  public_shares.rs  recent.rs  settings.rs  setup.rs  shares.rs  storage_workers.rs  storages.rs  trash.rs  users.rs
sarca/src/schemas/: auth.rs  favorites.rs  files.rs  mod.rs  recent.rs  settings.rs  setup.rs  shares.rs  storages.rs
sarca/src/services/: auth.rs  channel_health.rs  favorites.rs  files.rs  mod.rs  oauth.rs  recent.rs  replication.rs  settings.rs  setup.rs  shares.rs  storage_manager.rs  storage_workers.rs  storage_workers_scheduler.rs  storages.rs  thumbnails.rs  trash.rs  trash_purge.rs  users.rs
sarca/tests/: ui_serve.rs
ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
ui/src/: App.jsx  index.css  index.jsx
ui/src/api/: index.js  request.js
ui/src/common/: fileKind.js  fileLabel.js  filesChrome.js  settings.js  sortFs.js  storageSettings.js  theme.js
ui/src/components/: Access.jsx  AccessTypeChip.jsx  AppIcon.jsx  BottomNav.jsx  EmailVerifyBanner.jsx  FSListItem.jsx  FileInfo.jsx  FileTypeIcon.jsx  FileViewer.jsx  FolderPickerDialog.jsx  GrantAccess.jsx  Header.jsx  OAuthButtons.jsx  RestoreConflictDialog.jsx  SettingsModal.jsx  ShareLinkDialog.jsx  SideBar.jsx  SideBarItem.jsx  StorageSettingsModal.jsx  WaveDivider.jsx
ui/src/layouts/: Basic.jsx
ui/src/pages/: 404.jsx  ForgotPassword.jsx  Login.jsx  OAuthCallback.jsx  Register.jsx  ResetPassword.jsx  Verify.jsx
ui/src/pages/Files/: UploadFileTo.jsx  index.jsx
ui/src/pages/PublicShare/: index.jsx
ui/src/pages/Setup/: index.jsx
ui/src/pages/StorageWorkers/: StorageWorkerCreateForm.jsx  index.jsx
ui/src/pages/Storages/: StorageCreateForm.jsx  index.jsx
