[package]
name = "sarca"
version = "0.0.17"
edition = "2021"

[profile.release]
strip = true
codegen-units = 1
lto = true

[dependencies]
# routing
axum = { version = "0.6.20", features = ["headers", "tracing", "multipart"] }
mime_guess = "2.0.4"
tower = { version = "0.4.13", features = ["limit", "util"], default-features = false }
tower-http = { version = "0.4.4", features = ["fs", "trace", "cors"], default-features = false }

# serialization/deserialization
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"

# auth
pwhash = "1.0.0"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }

# async
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures = "0.3.29"
async-stream = "0.3.5"

# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# others
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["serde", "v4"] }

# HTTP client (без native-tls — ок для musl)
reqwest = { version = "0.11.22", default-features = false, features = ["multipart", "json", "stream", "rustls-tls"] }
percent-encoding = "2.3"

# thumbnails
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }

[dev-dependencies]
hyper = { version = "0.14", default-features = false, features = ["client"] }
