[package]
name = "sarca"
version = "0.0.20"
edition = "2021"
description = "Self-hosted cloud storage that keeps files in Telegram channels"
license = "MIT"
repository = "https://github.com/insigmo/sarca"
readme = "../README.md"
keywords = ["storage", "telegram", "self-hosted"]
categories = ["web-programming"]

[profile.release]
strip = true
codegen-units = 1
lto = true

# Strict Clippy: all + pedantic + nursery + cargo as deny.
# Only allow lints that are impractical for this Axum/SQL architecture.
[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
# Axum handlers / service methods return large futures by design.
large_futures = "allow"
# SQL strings prefer r#"…"# even when # is unnecessary.
needless_raw_string_hashes = "allow"
# Many small helpers are not const-safe once they touch non-const APIs; noise.
missing_const_for_fn = "allow"
# Byte offsets / Telegram sizes / JPEG dims — casts are intentional.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# Axum handler signatures stay `async` for uniformity even without await.
unused_async = "allow"
# Large request buffers / zip builders.
large_stack_frames = "allow"
# Keep statement order readable next to SQL / match arms.
items_after_statements = "allow"
# Serde / public JSON field names.
struct_field_names = "allow"

[dependencies]
# routing
axum = { version = "0.6.20", features = ["headers", "tracing", "multipart"] }
mime_guess = "2.0.4"
tower = { version = "0.4.13", features = ["limit", "util"], default-features = false }
tower-http = { version = "0.4.4", features = ["fs", "trace", "cors"], default-features = false }

# serialization/deserialization
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"

# auth
pwhash = "1.0.0"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }

# async
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures = "0.3.29"
async-stream = "0.3.5"

# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# others
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["serde", "v4"] }

# HTTP client (без native-tls — ок для musl)
reqwest = { version = "0.11.22", default-features = false, features = ["multipart", "json", "stream", "rustls-tls"] }
percent-encoding = "2.3"

# thumbnails
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }

# folder download as zip
zip = { version = "2.2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4.45", features = ["clock", "serde"] }

[dev-dependencies]
hyper = { version = "0.14", default-features = false, features = ["client"] }
